unpackaged/main/default/objects/Holiday_Request__c/fields/AutoPrimary_Org__c.field-meta.xml
<CustomField>
    <fullName>AutoPrimary_Org__c</fullName>
    <formula>TEXT(Employee_Record__r.Primary_Org__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Org</label>
    <type>Text</type>
</CustomField>