unpackaged/main/default/objects/Holiday_Request__c/fields/Calendar__c.field-meta.xml
<CustomField>
    <fullName>Calendar__c</fullName>
    <formula>HYPERLINK("https://majentasolutions.lightning.force.com/lightning/o/Event/home", "Reminder: Check Your Team's Calendar")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar</label>
    <type>Text</type>
</CustomField>