unpackaged/main/default/objects/Holiday_Request__c/fields/Days_Misalignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Days_Misalignment_Reason__c</fullName>
    <inlineHelpText>Enter a reason if the number of days you have entered does not align with the start - end dates, e.g. bank holiday or half a day</inlineHelpText>
    <label>Days Misalignment Reason</label>
    <type>TextArea</type>
</CustomField>