unpackaged/main/default/objects/Holiday_Request__c/fields/Employee_Record__c.field-meta.xml
<CustomField>
    <fullName>Employee_Record__c</fullName>
    <label>Employee Record</label>
    <referenceTo>Employee_Record__c</referenceTo>
    <relationshipLabel>Holiday Requests</relationshipLabel>
    <relationshipName>Holiday_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>