unpackaged/main/default/objects/Holiday_Request__c/fields/Holiday_BookedAuto__c.field-meta.xml
<CustomField>
    <fullName>Holiday_BookedAuto__c</fullName>
    <formula>Employee_Record__r.Holiday_Booked_RollUp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holiday Booked</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>