unpackaged/main/default/objects/Holiday_Request__c/fields/Holiday_EntitlementAuto__c.field-meta.xml
<CustomField>
    <fullName>Holiday_EntitlementAuto__c</fullName>
    <formula>Employee_Record__r.Holiday_Entitlement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holiday Entitlement</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>