unpackaged/main/default/objects/Holiday_Request__c/fields/Holiday_RemainingAuto__c.field-meta.xml
<CustomField>
    <fullName>Holiday_RemainingAuto__c</fullName>
    <formula>Employee_Record__r.Holiday_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holiday Remaining</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>