unpackaged/main/default/objects/Holiday_Request__c/fields/Manager_s_EmailAuto__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_EmailAuto__c</fullName>
    <formula>Employee_Record__r.User__r.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager's Email</label>
    <type>Text</type>
</CustomField>