unpackaged/main/default/objects/Holiday_Request__c/fields/ManagerAuto__c.field-meta.xml
<CustomField>
    <fullName>ManagerAuto__c</fullName>
    <formula>Employee_Record__r.User__r.Manager.FirstName &amp; " " &amp; Employee_Record__r.User__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>