unpackaged/main/default/objects/Holiday_Request__c/fields/NoofDaysAuto__c.field-meta.xml
<CustomField>
    <fullName>NoofDaysAuto__c</fullName>
    <formula>CASE(MOD( Start_Date__c   - DATE(1985,6,24),7),   
  0 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
		6 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( End_Date__c - Start_Date__c )/7)*5)</formula>
    <label>No. of Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>