unpackaged/main/default/objects/Holiday_Request__c/fields/Notes_Description_of_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Notes_Description_of_Holiday__c</fullName>
    <inlineHelpText>Optional notes</inlineHelpText>
    <label>Notes/ Description of Holiday</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>