unpackaged/main/default/objects/Holiday_Request__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <inlineHelpText>Number of days taken off as holiday (exclude weekends and bank holidays). Use 0.5 for half a day.</inlineHelpText>
    <label>Number of Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>