unpackaged/main/default/objects/Holiday_Request__c/fields/This_YearAuto__c.field-meta.xml
<CustomField>
    <fullName>This_YearAuto__c</fullName>
    <formula>YEAR( Start_Date__c )=YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year?</label>
    <type>Checkbox</type>
</CustomField>