unpackaged/main/default/objects/Holiday_Request__c/recordTypes/Approved_Holiday_Request.recordType-meta.xml
<RecordType>
    <fullName>Approved_Holiday_Request</fullName>
    <active>true</active>
    <label>Approved Holiday Request</label>
</RecordType>