unpackaged/main/default/objects/Holiday_Request__c/recordTypes/Holiday_Request_Layout.recordType-meta.xml
<RecordType>
    <fullName>Holiday_Request_Layout</fullName>
    <active>true</active>
    <label>Holiday Request Layout</label>
</RecordType>