unpackaged/main/default/objects/Holiday_Request__c/recordTypes/Rejected_Holiday_Request.recordType-meta.xml
<RecordType>
    <fullName>Rejected_Holiday_Request</fullName>
    <active>true</active>
    <label>Rejected Holiday Request</label>
</RecordType>