unpackaged/main/default/objects/Holiday_Request__c/validationRules/Can_only_create_own_holiday_requests.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_only_create_own_holiday_requests</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.Id &lt;&gt; Employee_Record__r.OwnerId,

$User.Id &lt;&gt; Employee_Record__r.User__r.ManagerId ,

NOT($Permission.Full_access_employee_records),

NOT( $Profile.Id = "00e4K000001dwXd") )</errorConditionFormula>
    <errorMessage>You cannot create holiday requests for other employees</errorMessage>
</ValidationRule>