unpackaged/main/default/objects/Holiday_Request__c/validationRules/Cannot_Cancel_If_Start_Has_Passed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Cancel_If_Start_Has_Passed</fullName>
    <active>true</active>
    <description>Cannot cancel as a holiday if the start date has already passed today's date</description>
    <errorConditionFormula>ISPICKVAL( Status__c, "Cancelled") 
  &amp;&amp; 
(  Start_Date__c - TODAY())  &lt;= 0

&amp;&amp; 

NOT( $Profile.Id = "00e4K000001dwXd")</errorConditionFormula>
    <errorMessage>Cannot cancel a holiday if the start date has already passed today's date</errorMessage>
</ValidationRule>