unpackaged/main/default/objects/Holiday_Request__c/validationRules/Cannot_edit_holiday_request.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_holiday_request</fullName>
    <active>true</active>
    <errorConditionFormula>OR(

ISCHANGED( Start_Date__c ),
 
ISCHANGED( End_Date__c ),

 ISCHANGED(Number_of_Days__c ))

&amp;&amp; 

NOT( $Profile.Id = "00e4K000001dwXd")</errorConditionFormula>
    <errorMessage>Cannot edit holiday request after it has been submitted</errorMessage>
</ValidationRule>