unpackaged/main/default/objects/Holiday_Request__c/validationRules/Start_Date_Must_Be_In_The_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Must_Be_In_The_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c   &lt;  TODAY()

&amp;&amp; 

NOT( $Profile.Id = "00e4K000001dwXd")</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date of Your Holiday Must Be In The Future</errorMessage>
</ValidationRule>